2012-6-30  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-07
    * R/as.bugs.array2: fix the code where array() meets dimension = NULL

2012-1-28  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-06.(Thanks to Ben Bolker)
    * R/jags: 
        1. alow 4 ways of data input, 
        2. alow bugs model as an R function.
    * man/jags: more example code to illustrate the added new features.

2012-1-27  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-05.
    * R/jags: better way to handle initialization, better use of random.seed
    * R/jags.parallel: set RNG stream in cluster. 


2012-1-25  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-04.
    * R/AllClass: jags.parallel now contains rjags
    * R/jags.parallel: 
        1. add jags.seed so that jags.parallel will start with different inits.
        2. now jags.parallel computes DIC
    * R/update: update for jags.parallel now computes DIC
    * R/traceplot: now works with jags.parallel

2012-1-22  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
    * DESCRIPTION (Version, Date): 0.03-03.
    * R/AllClass: add rjags.parallel class
    * R/jags.parallel: fix a bug for not naming the sims.array correctly
    * R/recompile: add recompile() for the rjags.parallel class
    * R/update: add update() for the rjags.parallel class

2012-1-12  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.03-02.
    * R/jags.parallel: add new function that runs jags parallely

2011-8-8  Masanao Yajima <yajima@ucla.edu>  
    * DESCRIPTION (Version, Date): 0.02-29.
    * R/jags: Cleaned up the code.

2011-7-28  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-28.
    * R/recompile/jags: add end.adaptation=TRUE  

2011-7-21  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-16.
    * R/print: fix a bug that would print out NA when DIC=FALSE
